; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/renesas_usbhs/extr_common.c_usbhs_bus_get_speed.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/renesas_usbhs/extr_common.c_usbhs_bus_get_speed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbhs_priv = type { i32 }

@DVSTCTR = common dso_local global i32 0, align 4
@RHST = common dso_local global i32 0, align 4
@USB_SPEED_LOW = common dso_local global i32 0, align 4
@USB_SPEED_FULL = common dso_local global i32 0, align 4
@USB_SPEED_HIGH = common dso_local global i32 0, align 4
@USB_SPEED_UNKNOWN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @usbhs_bus_get_speed(%struct.usbhs_priv* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usbhs_priv*, align 8
  %4 = alloca i32, align 4
  store %struct.usbhs_priv* %0, %struct.usbhs_priv** %3, align 8
  %5 = load %struct.usbhs_priv*, %struct.usbhs_priv** %3, align 8
  %6 = load i32, i32* @DVSTCTR, align 4
  %7 = call i32 @usbhs_read(%struct.usbhs_priv* %5, i32 %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* @RHST, align 4
  %9 = load i32, i32* %4, align 4
  %10 = and i32 %8, %9
  switch i32 %10, label %17 [
    i32 128, label %11
    i32 130, label %13
    i32 129, label %15
  ]

11:                                               ; preds = %1
  %12 = load i32, i32* @USB_SPEED_LOW, align 4
  store i32 %12, i32* %2, align 4
  br label %19

13:                                               ; preds = %1
  %14 = load i32, i32* @USB_SPEED_FULL, align 4
  store i32 %14, i32* %2, align 4
  br label %19

15:                                               ; preds = %1
  %16 = load i32, i32* @USB_SPEED_HIGH, align 4
  store i32 %16, i32* %2, align 4
  br label %19

17:                                               ; preds = %1
  %18 = load i32, i32* @USB_SPEED_UNKNOWN, align 4
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %17, %15, %13, %11
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @usbhs_read(%struct.usbhs_priv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
